# Task_3

./: CMakeLists.txt  main.cpp  readme.md
include/: windmill.hpp
src/: windmill.cpp
